# bits-and-bobs

./: CHANGELOG.md  LICENSE  README.md  bits-and-bobs.cabal
app/: Main.hs
src/: BitsAndBobs.hs
src/BitsAndBobs/: Accessor.hs  Block.hs  Codec.hs  Editor.hs  Generic.hs  Mmap.hsc  Schema.hs
test/BitsAndBobs/: AccessorTest.hs  CodecTest.hs  MmapTest.hs  SchemaTest.hs
