cabal-version:      2.4
name:               bits-and-bobs
version:            0.0.0
synopsis:           Bit-level codec library
description:
  See README at <https://github.com/stevana/bits-and-bobs#readme>

homepage:           https://github.com/stevana/bits-and-bobs#readme
bug-reports:        https://github.com/stevana/bits-and-bobs/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             Stevan Andjelkovic
maintainer:         stevana@users.noreply.github.com
copyright:          Copyright (c) 2022, Stevan Andjelkovic
category:           library, serialization, binary, parsing
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:        GHC ==9.0.2

library
  exposed-modules:
    BitsAndBobs
    BitsAndBobs.Block
    BitsAndBobs.Mmap
    BitsAndBobs.Schema

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , base        >=4.15.1.0
    , bytestring  ^>=0.11.3.1
    , containers
    , unix

  -- Other dependencies:
  build-depends:
    , QuickCheck
    , vector      ^>=0.12.3.1

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -Wmissing-export-lists
    -Wpartial-fields -Wmissing-deriving-strategies -fhide-source-paths
    -Wunused-packages

  if impl(ghc >=9.0)
    ghc-options:
      -Winvalid-haddock -Wunicode-bidirectional-format-characters
      -Werror=unicode-bidirectional-format-characters

  if impl(ghc >=9.2)
    ghc-options:
      -Wredundant-bang-patterns -Woperator-whitespace -Wimplicit-lift

  if impl(ghc >=9.4)
    ghc-options: -Wredundant-strictness-flags

executable mp3
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base
    , bits-and-bobs
    , bytestring

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , bits-and-bobs

source-repository head
  type:     git
  location: https://github.com/stevana/bits-and-bobs
